# NeX-AI-CLI

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  FINAL_REPORT.txt  FINAL_STATUS.md  PROJECT_SUMMARY.md  README.md  demo_advanced_features.sh  test_nex.sh  xmake.lua
assets/schema/: fnshell.ast.schema.json  sysbox.event.schema.json  tool.schema.json
config/: aicli.yaml  config.json  default.json  routing_rules.yaml  tools.yaml
docs/: AI_INTEGRATION_PLAN.md  QUICK_START.md  TECHNICAL_ARCHITECTURE.md  USER_MANUAL.md  architecture.md  benchmark.md  build-guide.md  config.md  dataflow.md  development-plan.md  fnshell.md  models.md  optimization.md  plugins.md  rename-summary.md  routing.md  security.md  sysbox.md  troubleshooting.md  usage.md
examples/prompts/: coding_assistant.md  system_default.md
examples/workflows/: code_refactor.yaml  rag_local.yaml
include/aicli/ai/: ai_engine.h
include/aicli/cli/: command_processor.h
include/aicli/core/: application.h
include/aicli/platform/: platform.h  platform_utils.h  system_monitor.h
include/nex/ai/: ai_core.h  ai_engine.h  llama_engine.h
include/nex/cli/: command_processor.h
include/nex/config/: config.h
include/nex/core/: application.h
include/nex/platform/: platform.h  platform_utils.h  system_monitor.h
include/nex/shell/: prompt_utils.h  shell.h
scripts/: fetch_models.sh  get_llama.sh  run_benchmark.sh  run_local.sh  setup_env.sh
src/: main.cpp  main_clean.cpp  main_old.cpp
src/ai/: ai_core.cpp  llama_engine.cpp
src/cli/: repl.cpp  repl.h
src/config/: config.cpp
src/core/conversation/: session.cpp  session.h  template.h
src/core/fnshell/: ast.cpp  ast.h  evaluator.cpp  evaluator.h  parser.cpp  parser.h  stdlib.cpp  stdlib.h  stdlib_extended.cpp  value.cpp  value.h
src/core/inference/: engine.h
src/core/inference/local_llama/: llama_engine.cpp  llama_engine.h
src/core/inference/remote/: gemini_client.cpp  gemini_client.h  http_client.cpp  http_client.h  openai_client.cpp  openai_client.h
src/core/router/: router.cpp  router.h
src/core/storage/: sqlite_store.cpp  sqlite_store.h
src/core/sysbox/: sysbox.cpp  sysbox.h  sysbox_sqlite.cpp
src/core/tools/: config.cpp  config.h  schema.cpp  schema.h  tools.cpp  tools.h
src/platform/: platform.cpp
src/platform/linux/: linux_system_monitor.cpp
src/shell/: command_executor.cpp  command_parser.cpp  environment.cpp  prompt_utils.cpp  shell_session.cpp  syntax_highlight.cpp
src/utils/: config.cpp  config.h  logging.cpp  logging.h
tests/e2e/: FINAL_TEST_REPORT.md  run_all_tests.sh  simple_tests.sh  test_comprehensive.sh  test_local_inference.sh  test_report.md  test_report.txt  test_sqlite_persistence.sh
tests/unit/: test_cli_repl.cpp
